<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yggdrasil.labs</groupId>
    <artifactId>mimir-boot</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Mimir Boot</name>

    <modules>
        <module>mimir-boot-parent</module>
        <module>mimir-boot-bom</module>
        <module>mimir-boot-common</module>
        <module>mimir-boot-starters</module>
        <module>examples</module>
    </modules>

    <properties>
        <!-- 📌 版本号统一管理：只修改这里即可，所有子模块自动继承 -->
        <revision>1.0-SNAPSHOT</revision>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <java.version>17</java.version>

        <!-- 项目信息 -->
        <project.name>Mimir Boot</project.name>
        <project.description>Yggdrasil-Labs 的 Java 企业级基础框架</project.description>
        <project.url>https://github.com/Yggdrasil-Labs/mimir-boot</project.url>
        <project.scm.url>https://github.com/Yggdrasil-Labs/mimir-boot.git</project.scm.url>
        <project.scm.connection>scm:git:git://github.com/Yggdrasil-Labs/mimir-boot.git</project.scm.connection>
        <project.scm.developerConnection>scm:git:ssh://github.com:Yggdrasil-Labs/mimir-boot.git
        </project.scm.developerConnection>

        <!-- 许可证 -->
        <project.license.name>Apache License, Version 2.0</project.license.name>
        <project.license.url>https://www.apache.org/licenses/LICENSE-2.0</project.license.url>

        <!-- Spotless 插件版本（用于根 POM 前缀解析与无源校验） -->
        <spotless.plugin.version>2.43.0</spotless.plugin.version>
    </properties>

    <!-- 开发者信息 -->
    <developers>
        <developer>
            <id>yggdrasil-labs</id>
            <name>Yggdrasil Labs</name>
            <email>contact@yggdrasil-labs.com</email>
            <organization>Yggdrasil Labs</organization>
            <organizationUrl>https://yggdrasil-labs.com</organizationUrl>
        </developer>
    </developers>

    <!-- 许可证 -->
    <licenses>
        <license>
            <name>${project.license.name}</name>
            <url>${project.license.url}</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <!-- SCM 信息 -->
    <scm>
        <connection>${project.scm.connection}</connection>
        <developerConnection>${project.scm.developerConnection}</developerConnection>
        <url>${project.scm.url}</url>
        <tag>HEAD</tag>
    </scm>

    <!-- 问题跟踪 -->
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/Yggdrasil-Labs/mimir-boot/issues</url>
    </issueManagement>

    <!-- CI/CD -->
    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/Yggdrasil-Labs/mimir-boot/actions</url>
    </ciManagement>

    <!-- 发布仓库配置 -->
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/Yggdrasil-Labs/mimir-boot</url>
        </repository>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- 在根模块声明一个“无源”的 Spotless，使 `spotless:*` 在根执行不报错 -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <configuration>
                    <java>
                        <includes>
                            <include>__NO_SOURCES__</include>
                        </includes>
                        <googleJavaFormat>
                            <version>1.22.0</version>
                            <style>GOOGLE</style>
                        </googleJavaFormat>
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
